{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 25,
  "lineage": "884b4b3b-4ac3-e602-59e3-59f4683bd5ec",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eipnatgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e864c622f53942d2",
            "association_id": "eipassoc-067cffe0a9a498493",
            "domain": "vpc",
            "id": "eipalloc-0e864c622f53942d2",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07463bc5b74b32d97",
            "private_dns": "ip-10-0-1-217.ec2.internal",
            "private_ip": "10.0.1.217",
            "public_dns": "ec2-3-216-33-135.compute-1.amazonaws.com",
            "public_ip": "3.216.33.135",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "project_task-eipnatgw-1"
            },
            "tags_all": {
              "Name": "project_task-eipnatgw-1"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c425a377a325890c",
            "association_id": "eipassoc-0c6be190cca7223c8",
            "domain": "vpc",
            "id": "eipalloc-0c425a377a325890c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-062f913686111e76d",
            "private_dns": "ip-10-0-2-39.ec2.internal",
            "private_ip": "10.0.2.39",
            "public_dns": "ec2-18-214-52-155.compute-1.amazonaws.com",
            "public_ip": "18.214.52.155",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "project_task-eipnatgw-2"
            },
            "tags_all": {
              "Name": "project_task-eipnatgw-2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_task",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:150278519573:internet-gateway/igw-03e9968fa9875a44e",
            "id": "igw-03e9968fa9875a44e",
            "owner_id": "150278519573",
            "tags": {
              "Name": "project_task-igw_task"
            },
            "tags_all": {
              "Name": "project_task-igw_task"
            },
            "vpc_id": "vpc-0361c8a83ee132f29"
          },
          "dependencies": [
            "aws_vpc.vpc_task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e864c622f53942d2",
            "connectivity_type": "public",
            "id": "nat-0a3f611c8bd381281",
            "network_interface_id": "eni-07463bc5b74b32d97",
            "private_ip": "10.0.1.217",
            "public_ip": "3.216.33.135",
            "subnet_id": "subnet-0f5601802c7a57589",
            "tags": {
              "Name": "project_task-eipnatgw-1"
            },
            "tags_all": {
              "Name": "project_task-eipnatgw-1"
            }
          },
          "dependencies": [
            "aws_eip.eipnatgw",
            "aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c425a377a325890c",
            "connectivity_type": "public",
            "id": "nat-0843f554fb1ebe031",
            "network_interface_id": "eni-062f913686111e76d",
            "private_ip": "10.0.2.39",
            "public_ip": "18.214.52.155",
            "subnet_id": "subnet-0a3c5f5e220981b30",
            "tags": {
              "Name": "project_task-eipnatgw-2"
            },
            "tags_all": {
              "Name": "project_task-eipnatgw-2"
            }
          },
          "dependencies": [
            "aws_eip.eipnatgw",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:150278519573:route-table/rtb-095064c9516e217ba",
            "id": "rtb-095064c9516e217ba",
            "owner_id": "150278519573",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0a3f611c8bd381281",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "project_task-rt_private-1"
            },
            "tags_all": {
              "Name": "project_task-rt_private-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0361c8a83ee132f29"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eipnatgw",
            "aws_nat_gateway.natgw",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_task"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:150278519573:route-table/rtb-0e86ffd07a8e19550",
            "id": "rtb-0e86ffd07a8e19550",
            "owner_id": "150278519573",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0843f554fb1ebe031",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "project_task-rt_private-2"
            },
            "tags_all": {
              "Name": "project_task-rt_private-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0361c8a83ee132f29"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eipnatgw",
            "aws_nat_gateway.natgw",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:150278519573:route-table/rtb-0410d2bc2a7bd3a74",
            "id": "rtb-0410d2bc2a7bd3a74",
            "owner_id": "150278519573",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03e9968fa9875a44e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "project_task-rt_public"
            },
            "tags_all": {
              "Name": "project_task-rt_public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0361c8a83ee132f29"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_task",
            "aws_vpc.vpc_task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d611c0e35ac4e51f",
            "route_table_id": "rtb-095064c9516e217ba",
            "subnet_id": "subnet-01fee011e23db2e48"
          },
          "dependencies": [
            "aws_eip.eipnatgw",
            "aws_nat_gateway.natgw",
            "aws_route_table.rt_private",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_task",
            "data.aws_availability_zones.availability_task"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e8c921509247bd5e",
            "route_table_id": "rtb-0e86ffd07a8e19550",
            "subnet_id": "subnet-08372e415e68e6d93"
          },
          "dependencies": [
            "aws_eip.eipnatgw",
            "aws_nat_gateway.natgw",
            "aws_route_table.rt_private",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_task",
            "data.aws_availability_zones.availability_task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c2a20acbfd38a130",
            "route_table_id": "rtb-0410d2bc2a7bd3a74",
            "subnet_id": "subnet-0f5601802c7a57589"
          },
          "dependencies": [
            "aws_internet_gateway.igw_task",
            "aws_route_table.rt_public",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_task",
            "data.aws_availability_zones.availability_task"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0845c76606467b023",
            "route_table_id": "rtb-0410d2bc2a7bd3a74",
            "subnet_id": "subnet-0a3c5f5e220981b30"
          },
          "dependencies": [
            "aws_internet_gateway.igw_task",
            "aws_route_table.rt_public",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_task",
            "data.aws_availability_zones.availability_task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:150278519573:subnet/subnet-01fee011e23db2e48",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01fee011e23db2e48",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "150278519573",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project_task-private_subnet-1"
            },
            "tags_all": {
              "Name": "project_task-private_subnet-1"
            },
            "vpc_id": "vpc-0361c8a83ee132f29"
          },
          "dependencies": [
            "aws_vpc.vpc_task",
            "data.aws_availability_zones.availability_task"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:150278519573:subnet/subnet-08372e415e68e6d93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08372e415e68e6d93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "150278519573",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project_task-private_subnet-2"
            },
            "tags_all": {
              "Name": "project_task-private_subnet-2"
            },
            "vpc_id": "vpc-0361c8a83ee132f29"
          },
          "dependencies": [
            "aws_vpc.vpc_task",
            "data.aws_availability_zones.availability_task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:150278519573:subnet/subnet-0f5601802c7a57589",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5601802c7a57589",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "150278519573",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project_task-public_subnet-1"
            },
            "tags_all": {
              "Name": "project_task-public_subnet-1"
            },
            "vpc_id": "vpc-0361c8a83ee132f29"
          },
          "dependencies": [
            "aws_vpc.vpc_task",
            "data.aws_availability_zones.availability_task"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:150278519573:subnet/subnet-0a3c5f5e220981b30",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a3c5f5e220981b30",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "150278519573",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project_task-public_subnet-2"
            },
            "tags_all": {
              "Name": "project_task-public_subnet-2"
            },
            "vpc_id": "vpc-0361c8a83ee132f29"
          },
          "dependencies": [
            "aws_vpc.vpc_task",
            "data.aws_availability_zones.availability_task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_task",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:150278519573:vpc/vpc-0361c8a83ee132f29",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09d386f4c9b66a81a",
            "default_route_table_id": "rtb-024eba4f2c7946813",
            "default_security_group_id": "sg-0e20bde9b6f3679e3",
            "dhcp_options_id": "dopt-0b43cc2f92cd3c366",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0361c8a83ee132f29",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-024eba4f2c7946813",
            "owner_id": "150278519573",
            "tags": {
              "Name": "project_task-vpc_task"
            },
            "tags_all": {
              "Name": "project_task-vpc_task"
            }
          }
        }
      ]
    }
  ]
}